# RELIABASE

./: .gitignore  DEPLOY.md  LICENSE  README.md  RELIABASE_Comprehensive_Overview.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.streamlit/: config.toml
examples/: assets.csv  events.csv  exposures.csv
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  endpoints.ts  types.ts
frontend/src/components/: Alert.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  MetricTooltip.tsx  Spinner.tsx  Stat.tsx  Table.tsx
frontend/src/components/charts/: ParetoChart.tsx  ReliabilityCurves.tsx  Sparkline.tsx
frontend/src/layouts/: Shell.tsx
frontend/src/pages/: AllAssets.tsx  Analytics.tsx  AssetDeepDive.tsx  Assets.tsx  Dashboard.tsx  EventDetails.tsx  Events.tsx  Exposures.tsx  FailureModes.tsx  Operations.tsx  Parts.tsx
frontend/src/utils/: csv.ts
src/reliabase/: __init__.py  config.py  database.py  make_report.py  models.py  schemas.py  seed_demo.py
src/reliabase/analytics/: __init__.py  business.py  manufacturing.py  metrics.py  reliability_extended.py  reporting.py  weibull.py
src/reliabase/api/: __init__.py  deps.py  main.py
src/reliabase/api/routers/: __init__.py  analytics.py  assets.py  demo.py  event_details.py  events.py  exposures.py  failure_modes.py  parts.py
src/reliabase/io/: __init__.py  csv_io.py
src/reliabase/services/: __init__.py  assets.py  demo.py  event_details.py  events.py  exposures.py  failure_modes.py  parts.py
streamlit_app/: Home.py  _common.py
streamlit_app/pages/: 1_Assets.py  1_Fleet_Overview.py  2_Asset_Deep_Dive.py  2_Exposures.py  3_Assets.py  3_Events.py  4_Event_Details.py  4_Exposures.py  5_Events.py  5_Failure_Modes.py  6_Event_Details.py  6_Parts.py  7_Analytics.py  7_Failure_Modes.py  8_Operations.py  8_Parts.py  9_Operations.py
tests/: conftest.py  test_analytics.py  test_analytics_extended.py  test_api.py  test_api_extended.py  test_report_and_io.py  test_smoke.py
