[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliabase"
version = "0.1.0"
description = "Reliability engineering tracking and analytics (MTBF/MTTR, Weibull, reports)"
authors = [ { name = "RELIABASE Team" } ]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastapi==0.99.1",
  "uvicorn[standard]==0.23.2",
  "sqlmodel==0.0.16",
  "pydantic<2.0",
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "reportlab>=4.0",
  "python-dotenv>=1.0",
  "typer>=0.9",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx>=0.24",
  "faker>=19",
  "freezegun>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["reliabase"]
branch = true
