[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reliabase"
version = "0.1.0"
description = "Reliability engineering tracking and analytics platform — MTBF/MTTR, Weibull analysis, and PDF reports"
authors = [{ name = "Ethan Boicey" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["reliability", "engineering", "mtbf", "mttr", "weibull", "analytics", "maintenance"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
]
dependencies = [
  "fastapi==0.99.1",
  "uvicorn[standard]==0.23.2",
  "sqlmodel==0.0.16",
  "pydantic<2.0",
  "pandas>=2.1",
  "numpy>=1.26",
  "scipy>=1.11",
  "matplotlib>=3.7",
  "reportlab>=4.0",
  "python-dotenv>=1.0",
  "typer>=0.9",
  "streamlit>=1.38.0",
]

[project.urls]
Homepage = "https://github.com/eboicey/RELIABASE"
Repository = "https://github.com/eboicey/RELIABASE"
Issues = "https://github.com/eboicey/RELIABASE/issues"

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-asyncio>=0.23",
  "httpx<0.26",
  "faker>=19",
  "freezegun>=1.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.coverage.run]
source = ["reliabase"]
branch = true
